Fix margins so contact-container will hide behind all content

--- a/main.scss
+++ b/main.scss
@@ -209,7 +209,7 @@ html {
   
       #text-container, #languages-container, #projects-container, #btn-container, #contact-container {
         @include container;
-        margin: 20px 0;
+        padding: 10px 5px;
   
         p {
           margin-bottom: 15px;
@@ -251,6 +251,7 @@ html {
       }
   
       #projects-container {
+        padding-top: 5vh;
         margin-bottom: 5vh;
   
         p {
@@ -308,7 +309,7 @@ html {
       }
   
       #btn-container {
-        margin-top: 30px;
+        padding-top: 30px;
         padding-bottom: 30px;
         width: 100%;
   
@@ -376,7 +377,10 @@ html {
   
       #contact-container {
         bottom: 0;
-        max-width: 370px;
+        left:auto;
+        right: auto;
+        max-width: 375px;
+        padding-right: 15px;
   
         p {
           margin-bottom: 15px;
